--- a/src/CombatAnalysis.App/Views/LoginView.xaml
+++ b/src/CombatAnalysis.App/Views/LoginView.xaml
@@ -59,10 +59,10 @@
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Width="250" Height="80" TextWrapping="Wrap" Text="Не удалось получить ответ от сервера. Возможно проблемы с подключением или сервер временно не доступен"
                            FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding ServerIsNotAvailable, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
             </StackPanel>
-            <Button Grid.Column="1" Grid.Row="3" Height="30" Width="125" Content="Авторизация"
+            <Button Grid.Column="1" Grid.Row="3" Height="30" Width="125" Content="Авторизация" Style="{StaticResource showButton}"
                     Command="{Binding LoginCommand}" />
         </Grid>
-        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="Назад"
+        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="Назад" Style="{StaticResource showButton}"
                     Command="{Binding CancelCommand}" />
     </Grid>
 </views:MvxWpfView>
