--- a/src/CombatAnalysis.App/Views/ChatView.xaml
+++ b/src/CombatAnalysis.App/Views/ChatView.xaml
@@ -2,6 +2,7 @@
     x:Class="CombatAnalysis.App.Views.ChatView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -43,7 +44,19 @@
                 </DataTemplate>
             </ContentControl.Resources>
         </ContentControl>
-
+        
+        <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Top" Margin="50 30">
+            <TextBlock VerticalAlignment="Center" Text="Создать групповой чат" FontSize="18" Margin="0 0 20 0"/>
+            <Button Style="{StaticResource textBoxButton}" VerticalAlignment="Center" mvx:Bi.nd="Command CreateGroupChatCommand">
+                <Button.ToolTip>
+                    <ToolTip>
+                        Создать
+                    </ToolTip>
+                </Button.ToolTip>
+                <Icon:PackIconMaterial Kind="Plus" Foreground="#a6a6a6" Width="20" Height="20"/>
+            </Button>
+        </StackPanel>
+        
         <Border Grid.Column="2" Grid.Row="1" Grid.RowSpan="3">
             <Grid>
                 <StackPanel Orientation="Horizontal" Margin="30 0 0 30">
