--- a/src/CombatAnalysis.App/Views/LoginView.xaml
+++ b/src/CombatAnalysis.App/Views/LoginView.xaml
@@ -48,11 +48,11 @@
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Email" FontSize="18" Margin="0 20"/>
-                <TextBox VerticalAlignment="Center" HorizontalAlignment="Center" Height="25" Width="250" Text="{Binding Email}" />
+                <TextBox Style="{StaticResource messageTextBox}" Height="30" Padding="5" Width="250" Text="{Binding Email}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Пароль" FontSize="18" Margin="0 20"/>
-                <PasswordBox Name="password" VerticalAlignment="Center" HorizontalAlignment="Center" Height="25" Width="250"
+                <PasswordBox Name="password" Style="{StaticResource passwordTextBox}" Height="25" Width="250"
                              PasswordChanged="PasswordBox_PasswordChanged"/>
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Вы указали не верно логин/пароль"
                            FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding AuthIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
