--- a/src/CombatAnalysis.App/Views/RegistrationView.xaml
+++ b/src/CombatAnalysis.App/Views/RegistrationView.xaml
@@ -1,7 +1,6 @@
 ﻿<views:MvxWpfView
     x:Class="CombatAnalysis.App.Views.RegistrationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +8,6 @@
     xmlns:local="clr-namespace:CombatAnalysis.App.Views"
     xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-    xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
     mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
 
     <Grid>
@@ -48,16 +46,16 @@
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Email" FontSize="18" Margin="0 20"/>
-                <TextBox VerticalAlignment="Center" HorizontalAlignment="Center" Height="25" Width="250" Text="{Binding Email}" />
+                <TextBox Style="{StaticResource messageTextBox}" Height="30" Padding="5" Width="250" Text="{Binding Email}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Пароль" FontSize="18" Margin="0 20"/>
-                <PasswordBox VerticalAlignment="Center" HorizontalAlignment="Center" Height="25" Width="250"
+                <PasswordBox Style="{StaticResource passwordTextBox}" Height="25" Width="250"
                              PasswordChanged="PasswordBox_PasswordChanged"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Повторный пароль" FontSize="18" Margin="0 20"/>
-                <PasswordBox VerticalAlignment="Center" HorizontalAlignment="Center" Height="25" Width="250"
+                <PasswordBox Style="{StaticResource passwordTextBox}" Height="25" Width="250"
                              PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
